--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ license = "GPL-3.0-or-later"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "dotdict (>=0.1,<0.2)"
+    "dotdict (>=0.1,<0.2)",
+    "flask (>=3.1.0,<4.0.0)"
 ]
 
 
