--- a/d6-api/pyproject.toml
+++ b/d6-api/pyproject.toml
@@ -10,7 +10,9 @@ requires-python = ">=3.12"
 dependencies = [
     "flask (>=3.1.0,<4.0.0)",
     "dotdict (>=0.1,<0.2)",
-    "gunicorn (>=23.0.0,<24.0.0)"
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "flasgger (>=0.9.7.1,<0.10.0.0)",
+    "flask-restx (>=1.3.0,<2.0.0)"
 ]
 
 [tool.poetry]
