--- a/d6-api/Makefile
+++ b/d6-api/Makefile
@@ -7,3 +7,11 @@ run-debug:
 
 run-production:
 	poetry run gunicorn --chdir d6_api 'd6_api:create_app()'
+
+shell:
+	poetry run flask --app d6_api shell
+
+# Don't forget to set ALEMBIC_MSG
+db-upgrade:
+	poetry run flask --app d6_api db revision -m "$(ALEMBIC_MSG)"
+	poetry run flask --app d6_api db upgrade
