--- a/d6-api/pyproject.toml
+++ b/d6-api/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "gunicorn (>=23.0.0,<24.0.0)",
     "flasgger (>=0.9.7.1,<0.10.0.0)",
     "flask-restx (>=1.3.0,<2.0.0)",
-    "flask-sqlalchemy (>=3.1.1,<4.0.0)"
+    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
+    "flask-alembic (>=3.1.1,<4.0.0)"
 ]
 
 [tool.poetry]
