--- a/d6-api/.vscode/launch.json
+++ b/d6-api/.vscode/launch.json
@@ -1,13 +1,14 @@
 {
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Python Debugger: Flask",
             "type": "debugpy",
             "request": "launch",
             "module": "flask",
             "env": {
-                "FLASK_APP": "d6_api/app.py",
+                "FLASK_APP": "d6_api",
                 "FLASK_DEBUG": "1"
             },
             "args": [
