Save database state to disk

--- a/d6-api/Makefile
+++ b/d6-api/Makefile
@@ -15,3 +15,7 @@ shell:
 db-upgrade:
 	poetry run flask --app d6_api db revision "$(ALEMBIC_MSG)"
 	poetry run flask --app d6_api db upgrade
+
+db-dump:
+	# Dump the database to data/data.json
+	poetry run python -c "from d6_api import create_app; app=create_app(); from d6_api.util import dump_db; dump_db(app)"
