database serialisation with foreign keys

--- a/d6-api/Makefile
+++ b/d6-api/Makefile
@@ -19,3 +19,6 @@ db-upgrade:
 db-dump:
 	# Dump the database to data/data.json
 	poetry run python -c "from d6_api import create_app; app=create_app(); from d6_api.util import dump_db; dump_db(app)"
+	mv d6_api/data/data.json d6_api/data/data.json.tmp
+	cat d6_api/data/data.json.tmp | jq . > d6_api/data/data.json
+	rm d6_api/data/data.json.tmp
