--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
     ],
     "python.testing.pytestEnabled": true,
     "python.testing.cwd": "d6-api/d6_api/tests",
-    "makefile.configureOnOpen": false
+    "makefile.configureOnOpen": false,
+    "files.autoSave": "afterDelay"
 }
